[tool.poetry]
name = "gtamk-blog"
version = "0.1.0"
description = "family site"
authors = ["grwoak <graham.wiese@gmail.com>"]
readme = "README.md"
packages = [{include = "gtamk_blog"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
